tests/instantiating/invalid/range_property_invalid_type_in_list/bus.fbd
main bus
	foo config
		range = [1, true]
